# Mistral-Hackathon

./: .env.sample  .gitignore  Dockerfile.backend  Dockerfile.frontend  PROJECT_CONTEXT.md  README.md  api_server.py  architecture.d2  auth.py  check_mistral_api.py  config.py  cv_context.txt  db.py  docker-compose.yml  frontend.html  index.html  kokoro_tts.py  main.py  mistral_completion.py  models.py  nginx.conf  package-lock.json  package.json  prompts.py  pyproject.toml  render.yaml  requirements.txt  tsconfig.app.tsbuildinfo  vite.config.ts
profiles/: dimitris.json  dimitris123.json  mhtsaras.json  michalisdikaiopoulos1.json  michalisdikaiopoulos2.json  michalisdikaiopoulosa.json  michalisdikaiopoulosdhd.json  sdfnljsvjlnjnlvs.json  sdonisdfnjdfns.json  sgdijnovndjns.json  skfnjsnfs.json  slnjvjlnsnjlsvd.json  snojsjnjnsd.json  xhinomullaymeri.json
routers/: auth.py  cv.py  profiles.py  voice.py
services/: clients.py  completion.py  embeddings.py  search.py  stt.py  tts.py
src/: App.tsx  index.css
src/components/: About.tsx  AnimatedBackground.tsx  AnimatedBubbles.tsx  AvatarFallback.tsx  Contact.tsx  Footer.tsx  Gallery.tsx  GlobalMenu.tsx  Hero.tsx  Logo.tsx  Navbar.tsx  Portfolio.tsx  ProjectDetailDialog.tsx
src/config/: chatbot-prompt.ts  tts-config.ts
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/lib/: api.ts  upload.ts  utils.ts
src/pages/: Agent.tsx  Auth.tsx  CreateProfile.tsx  Index.tsx  Landing.tsx
talking/: api_server.py  check_mistral_api.py  elevenlabs_tts.py  frontend.html  frontend_premium.html  voice_api_test.py
(+17 files in other folders)
