[project]
name = "mistral-hackathon"
version = "0.1.0"
description = "AI-powered personal profile platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-dotenv>=1.2.1",
    "pydantic>=2.7.1",
    "mistralai>=1.12.4",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
]
